--- a/market.html
+++ b/market.html
@@ -171,9 +171,11 @@
   <nav>
     <a href="dashboard.html">Dashboard</a>
     <a href="market.html" style="text-decoration: underline;">Market</a>
+     <a href="auto.html">Auto-Trading</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="transactions.html">Transactions</a>
     <a href="settings.html">Settings</a>
+     <a href="notifications.html">Notifications</a>
     <a href="login.html">Logout</a>
   </nav>
 </header>
